# rkllama

./: .gitignore  Dockerfile  README.md  client.py  config_schema.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup.sh
.github/workflows/: docker-publish.yml
config/: default.ini
converter/: README.md  converter.py  requirements.txt
converter/src/: converter.py  quantization.py  rkllm.py  utils.py
documentation/: changelog.md  french.md
documentation/api/: english.md  french.md  ollama-compatibility.md  tools.md
lib/: manifest.json
src/: GetModels.py  callback.py  classes.py  format_utils.py  image_utils.py  img_encoder.py  model_utils.py  process.py  rkllm.py  rknn.py  server_utils.py  variables.py  worker.py  ztu_somemodelruntime_rknnlite2.py
src/rkllama/api/: GetModels.py  __init__.py  callback.py  classes.py  debug_utils.py  format_utils.py  image_generator.py  model_utils.py  process.py  rkllm.py  rknn.py  rknnlite.py  rknnlite_runtime.py  server_utils.py  stt.py  tts.py  variables.py  worker.py
src/rkllama/api/models/audio/: __init__.py  mms_tts.py  omniasr.py  piper.py  whisper.py
src/rkllama/client/: client.py
src/rkllama/config/: config.py  config_schema.py
src/rkllama/server/: server.py
