[project]
name = "rkllama"
version = "0.0.4"
authors = [
    { name="NotPunchnox", email="punchnoxpro@gmail.com" },
    { name="TomJacobsUK", email="tom@tomjacobs.co.uk" },
    { name="Daniel Ferreira", email="danielferreirandrade@gmail.com" },
]
description = "Ollama alternative for Rockchip NPU"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/NotPunchnox/rkllama"
Issues = "https://github.com/NotPunchnox/rkllama/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
